--- a/Rules_Provider/Complete/MainlandMedia/NeteaseMusic.yaml
+++ b/Rules_Provider/Complete/MainlandMedia/NeteaseMusic.yaml
@@ -1,5 +1,5 @@
 # > 网易云音乐
-# 总条数: 30条
+# 总条数: 28条
 payload:
   - DOMAIN-SUFFIX,163yun.com
   - DOMAIN-SUFFIX,api.iplay.163.com
@@ -10,24 +10,22 @@ payload:
   - DOMAIN-SUFFIX,music.163.com
   - DOMAIN-SUFFIX,music.163.com.163jiasu.com
   - DOMAIN-SUFFIX,yun-app.net
-  - DOMAIN,iadmat.nosdn.127.net
   - DOMAIN,netease.ugcvideoss.ourdvs.com
-  - IP-CIDR,101.71.154.241/32
-  - IP-CIDR,103.126.92.13/32
-  - IP-CIDR,103.126.92.132/31
-  - IP-CIDR,112.13.119.17/32
-  - IP-CIDR,112.13.119.18/32
-  - IP-CIDR,112.13.122.1/32
-  - IP-CIDR,112.13.122.4/32
-  - IP-CIDR,115.236.112.0/20
-  - IP-CIDR,118.24.63.156/32
-  - IP-CIDR,182.92.170.253/32
-  - IP-CIDR,193.112.159.225/32
-  - IP-CIDR,223.252.192.0/19
-  - IP-CIDR,39.105.175.128/32
-  - IP-CIDR,39.105.63.80/32
-  - IP-CIDR,45.254.48.1/32
-  - IP-CIDR,47.100.127.239/32
-  - IP-CIDR,59.111.128.0/17
-  - IP-CIDR,59.111.19.33/32
-  - IP-CIDR,59.111.21.14/31
+  - IP-CIDR,101.71.154.241/32,no-resolve
+  - IP-CIDR,103.126.92.132/31,no-resolve
+  - IP-CIDR,112.13.119.17/32,no-resolve
+  - IP-CIDR,112.13.119.18/32,no-resolve
+  - IP-CIDR,112.13.122.1/32,no-resolve
+  - IP-CIDR,112.13.122.4/32,no-resolve
+  - IP-CIDR,115.236.112.0/20,no-resolve
+  - IP-CIDR,118.24.63.156/32,no-resolve
+  - IP-CIDR,182.92.170.253/32,no-resolve
+  - IP-CIDR,193.112.159.225/32,no-resolve
+  - IP-CIDR,223.252.192.0/19,no-resolve
+  - IP-CIDR,39.105.175.128/32,no-resolve
+  - IP-CIDR,39.105.63.80/32,no-resolve
+  - IP-CIDR,45.254.48.1/32,no-resolve
+  - IP-CIDR,47.100.127.239/32,no-resolve
+  - IP-CIDR,59.111.128.0/17,no-resolve
+  - IP-CIDR,59.111.19.33/32,no-resolve
+  - IP-CIDR,59.111.21.14/31,no-resolve
