--- a/Rules_Provider/Complete/MainlandMedia/TencentVideo.yaml
+++ b/Rules_Provider/Complete/MainlandMedia/TencentVideo.yaml
@@ -20,35 +20,35 @@ payload:
   - DOMAIN,video-search-1258344701.shiply-cdn.qq.com
   - DOMAIN,video-vip-1258344701.shiply-cdn.qq.com
   - DOMAIN,yoo.gtimg.com
-  - IP-CIDR,58.49.111.117/32
-  - IP-CIDR,58.49.111.79/32
-  - IP-CIDR,58.49.111.95/32
-  - IP-CIDR6,::ffff:113.248.172.245/128
-  - IP-CIDR6,::ffff:114.235.96.186/128
-  - IP-CIDR6,::ffff:115.236.128.112/128
-  - IP-CIDR6,::ffff:115.236.128.120/128
-  - IP-CIDR6,::ffff:115.236.128.24/128
-  - IP-CIDR6,::ffff:115.236.128.80/128
-  - IP-CIDR6,::ffff:117.64.75.196/128
-  - IP-CIDR6,::ffff:117.68.200.210/128
-  - IP-CIDR6,::ffff:117.87.144.24/128
-  - IP-CIDR6,::ffff:121.56.126.255/128
-  - IP-CIDR6,::ffff:124.73.198.81/128
-  - IP-CIDR6,::ffff:124.73.200.142/128
-  - IP-CIDR6,::ffff:175.6.84.30/128
-  - IP-CIDR6,::ffff:175.6.84.96/128
-  - IP-CIDR6,::ffff:183.161.144.133/128
-  - IP-CIDR6,::ffff:183.161.144.230/128
-  - IP-CIDR6,::ffff:183.161.149.105/128
-  - IP-CIDR6,::ffff:198.18.5.138/128
-  - IP-CIDR6,::ffff:198.18.6.81/128
-  - IP-CIDR6,::ffff:198.18.6.83/128
-  - IP-CIDR6,::ffff:223.240.191.238/128
-  - IP-CIDR6,::ffff:27.157.209.46/128
-  - IP-CIDR6,::ffff:58.217.232.117/128
-  - IP-CIDR6,::ffff:58.217.232.68/128
-  - IP-CIDR6,::ffff:58.217.232.79/128
-  - IP-CIDR6,::ffff:58.58.0.90/128
-  - IP-CIDR6,::ffff:60.171.183.161/128
-  - IP-CIDR6,::ffff:60.171.183.186/128
-  - IP-CIDR6,::ffff:60.171.183.98/128
+  - IP-CIDR,58.49.111.117/32,no-resolve
+  - IP-CIDR,58.49.111.79/32,no-resolve
+  - IP-CIDR,58.49.111.95/32,no-resolve
+  - IP-CIDR6,::ffff:113.248.172.245/128,no-resolve
+  - IP-CIDR6,::ffff:114.235.96.186/128,no-resolve
+  - IP-CIDR6,::ffff:115.236.128.112/128,no-resolve
+  - IP-CIDR6,::ffff:115.236.128.120/128,no-resolve
+  - IP-CIDR6,::ffff:115.236.128.24/128,no-resolve
+  - IP-CIDR6,::ffff:115.236.128.80/128,no-resolve
+  - IP-CIDR6,::ffff:117.64.75.196/128,no-resolve
+  - IP-CIDR6,::ffff:117.68.200.210/128,no-resolve
+  - IP-CIDR6,::ffff:117.87.144.24/128,no-resolve
+  - IP-CIDR6,::ffff:121.56.126.255/128,no-resolve
+  - IP-CIDR6,::ffff:124.73.198.81/128,no-resolve
+  - IP-CIDR6,::ffff:124.73.200.142/128,no-resolve
+  - IP-CIDR6,::ffff:175.6.84.30/128,no-resolve
+  - IP-CIDR6,::ffff:175.6.84.96/128,no-resolve
+  - IP-CIDR6,::ffff:183.161.144.133/128,no-resolve
+  - IP-CIDR6,::ffff:183.161.144.230/128,no-resolve
+  - IP-CIDR6,::ffff:183.161.149.105/128,no-resolve
+  - IP-CIDR6,::ffff:198.18.5.138/128,no-resolve
+  - IP-CIDR6,::ffff:198.18.6.81/128,no-resolve
+  - IP-CIDR6,::ffff:198.18.6.83/128,no-resolve
+  - IP-CIDR6,::ffff:223.240.191.238/128,no-resolve
+  - IP-CIDR6,::ffff:27.157.209.46/128,no-resolve
+  - IP-CIDR6,::ffff:58.217.232.117/128,no-resolve
+  - IP-CIDR6,::ffff:58.217.232.68/128,no-resolve
+  - IP-CIDR6,::ffff:58.217.232.79/128,no-resolve
+  - IP-CIDR6,::ffff:58.58.0.90/128,no-resolve
+  - IP-CIDR6,::ffff:60.171.183.161/128,no-resolve
+  - IP-CIDR6,::ffff:60.171.183.186/128,no-resolve
+  - IP-CIDR6,::ffff:60.171.183.98/128,no-resolve
